Fix shift+arrow key selection

--- a/resources/css/components/song-item.css
+++ b/resources/css/components/song-item.css
@@ -20,5 +20,5 @@
     background-color: color-mix(in hsl, var(--accent-color) 40%, transparent);
 }
 :host(:state(selected)) {
-    background-color: color-mix(in hsl, var(--accent-color) 70%, transparent);
+    background-color: var(--accent-color);
 }
